--- a/app/views/home_admin/_blocLarge.html.erb
+++ b/app/views/home_admin/_blocLarge.html.erb
@@ -34,8 +34,8 @@
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-                <%#= render 'home_admin/selection_qr' %>
-                <%= render 'home_admin/selection_qr_test' %>
+                <%= render 'home_admin/selection_qr' %>
+                <%#= render 'home_admin/selection_qr_test' %>
             </div>
         </div>
 
