produit archive - suppression en cascade

--- a/app/views/produits/_form.html.erb
+++ b/app/views/produits/_form.html.erb
@@ -85,6 +85,10 @@
           { include_blank: 'Sélectionner' }, class: "form-select" %>
         </div>
 
+        <%= custom_form_elements(form, 
+          [:actif, :check_box]
+        ) %>
+
       </div>
 
 
