--- a/app/assets/stylesheets/document.css
+++ b/app/assets/stylesheets/document.css
@@ -48,7 +48,6 @@
   margin-bottom: 0px;
 }
 
-
 .h6-doc{
   color: rgb(143, 31, 70);
   font-family: Arial, Helvetica, sans-serif;
@@ -66,7 +65,6 @@
 .table-invisible{
   background-color: rgb(249, 237, 237);
   border-color:  rgb(249, 237, 237);
-
 }
 
 .th-doc, .tfoot-doc{
@@ -164,6 +162,15 @@
 .red-colored{
   color: red;
 }
+
+
+.container-edition {
+  display: flex;
+  flex-wrap: wrap; /* Allows items to wrap onto multiple lines */
+  justify-content: center; /* Horizontally centers items in the container */
+  margin-left: 40px; /* Horizontally centers items in the container */
+}
+
 
 .table-etiquette{
   width: 400px;
