--- a/app/views/etiquettes/edition.html.erb
+++ b/app/views/etiquettes/edition.html.erb
@@ -1,54 +1,53 @@
+<div class="container-edition">
 
+  <% @produits = [@produit1, @produit2, @produit3, @produit4] %>
 
-<% @produits = [@produit1, @produit2, @produit3, @produit4] %>
-
-<% @produits.each do |produit| %>
-  <div style="display: inline-block;">
+  <% @produits.each do |produit| %>
+    <div style="display: inline-block;">
 
       <% if produit.present? %>
         <table class="table-etiquette">
-            <thead> 
-              <tr>
-                <th class="th-etiquette shadowed text-center" colspan="2">
-                  <%= image_tag(produit.default_image, class:"img-etiquette") if produit.present? %> 
-                </th>
-              </tr>
-              <tr>
-                <th class="th-titre-etiquette middled shadowed" colspan="2">
-                  <h3 class="bolded text-dark"> <%= produit.nom if produit.present? %> </h3> 
-                </th>
-              </tr>
-            </thead> 
+          <thead> 
+            <tr>
+              <th class="th-etiquette shadowed text-center" colspan="2">
+                <%= image_tag(produit.default_image, class:"img-etiquette") if produit.present? %> 
+              </th>
+            </tr>
+            <tr>
+              <th class="th-titre-etiquette middled shadowed" colspan="2">
+                <h3 class="bolded text-dark"> <%= produit.nom if produit.present? %> </h3> 
+              </th>
+            </tr>
+          </thead> 
             
-            <tbody> 
-              <tr>
-               
-                <td class="td-etiquette middled shadowed" colspan="1">
-                 
-                  <span>Location : <%= number_to_currency(produit.prixlocation, locale: :fr, precision: 0) if produit.present? %></span> 
-                  <br>
-                  <span>Vente : <%= number_to_currency(produit.prixvente, locale: :fr, precision: 0) if produit.present? %></span>
+          <tbody> 
+            <tr>
                 
-                  <div class="td-etiquette middled centered">  
-                    Taille(s) : 
-                    <% if produit.taille.present? %>
-                      <span class="text-dark p-1" style="border: 2px solid black; border-radius: 10px;"> 
-                        <%= produit.taille&.nom %>
+              <td class="td-etiquette middled shadowed" colspan="1">
+                
+                <span>Location : <%= number_to_currency(produit.prixlocation, locale: :fr, precision: 0) if produit.present? %></span> 
+                <br>
+                <span>Vente : <%= number_to_currency(produit.prixvente, locale: :fr, precision: 0) if produit.present? %></span>
+              
+                <div class="td-etiquette middled centered">  
+                  Taille(s) : 
+                  <% if produit.taille.present? %>
+                    <span class="text-dark p-1" style="border: 2px solid black; border-radius: 10px;"> 
+                      <%= produit.taille&.nom %>
+                    </span>
+
+                  <hr>
+
+                    <% same_produit_same_couleur_others_tailles(produit).each do |produit| %>
+                      <span class="p-1" style="color: grey; border: 2px solid grey; border-radius: 10px;"> 
+                        <%= produit.taille.nom if produit.taille&.nom %>
                       </span>
-
-                    <hr>
-
-                      <% same_produit_same_couleur_others_tailles(produit).each do |produit| %>
-                        <span class="p-1" style="color: grey; border: 2px solid grey; border-radius: 10px;"> 
-                          <%= produit.taille.nom if produit.taille&.nom %>
-                        </span>
-                      <% end %>
-                      
                     <% end %>
-                  </div>
+                    
+                  <% end %>
+                </div>
 
-
-                  <div class="td-etiquette middled centered text-center">  
+                <div class="td-etiquette middled centered text-center">  
                   Couleur(s) : 
                   <% if produit.couleur.present? %>
 
@@ -69,48 +68,55 @@
                     
                   <% end %>
                 </div>
-                
-                </td>
-                <td class="td-etiquette middled centered shadowed">
-                  <%= image_tag(produit.qr_code, class:"img-qr-etiquette") if produit.qr_code.present? %>
-                </td>
-              </tr>
-            </tbody> 
-          </table>
-        <% end %>
-
-  </div>
-
-<% end %>
-
-<% unless request.format.html? %> <%# masquer sur html %>
- 
-  <div class="page-break"></div>  <%# changement de page vers verso %>
-
-  <% @produits.each do |produit| %>
-    <div style="display: inline-block;">
-      <% if produit.present? %>
-        <div class="table-etiquette-verso"> 
-          <% 8.times do %>  
-            <hr class="hr-doted">
-          <% end %>
-        </div>
+                  
+              </td>
+              <td class="td-etiquette middled centered shadowed">
+                <%= image_tag(produit.qr_code, class:"img-qr-etiquette") if produit.qr_code.present? %>
+              </td>
+            </tr>
+          </tbody> 
+        </table>
       <% end %>
+
     </div>
+
   <% end %>
 
-<% end %>
+  <% unless request.format.html? %> <%# masquer sur html %>
+  
+    <div class="page-break"></div>  <%# changement de page vers verso %>
+
+    <% @produits.each do |produit| %>
+      <div style="display: inline-block;">
+        <% if produit.present? %>
+          <div class="table-etiquette-verso"> 
+            <% 8.times do %>  
+              <hr class="hr-doted">
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+
+  <% end %>
 
 
-<% if request.format.html? %> <%# que sur html %>
+  <% if request.format.html? %> <%# que sur html %>
 
-  <hr>
+    <hr>
 
-  <%= link_to "", url_for(prod1: @produit1, prod2: @produit2, prod3: @produit3, prod4: @produit4, format: :pdf), 
-        class:"fa-solid fa-file-pdf fa-bounce btn btn-xl btn-danger",
-        title: "Editer étiquette", target: "_blank" %> 
+    <div class="container-fluid d-flex justify-content-between">
 
-  <%= return_model_index_button("Retour vers etiquettes", etiquettes_index_path) %>
+      <%= return_model_index_button("Retour vers etiquettes", etiquettes_index_path) %>
+      <%= link_to url_for(prod1: @produit1, prod2: @produit2, prod3: @produit3, prod4: @produit4, format: :pdf), 
+            class:"btn m-1 btn-danger",
+            title: "Editer étiquette", target: "_blank" do %> 
+        <i class="fa-solid fa-xl fa-file-pdf fa-bounce "></i>
+        <span class="fw-bold">Editer</span>
+      <% end %>
+        
+    </div>
 
+  <% end %>
 
-<% end %>
+</div>
