remove prices from produits search to prevent error on pg

--- a/app/views/pdf_commande/_synthese.html.erb
+++ b/app/views/pdf_commande/_synthese.html.erb
@@ -6,7 +6,7 @@
         
             <tbody>
                 <tr class="centered">
-                    <td colspan="5" class="td-doc started">Soldes</td>
+                    <td colspan="5" class="td-doc started">Solde</td>
                     <td class="td-doc-valeurs ended">
                          <%= colored_value_format(solde_prix(@doc_edition.commande)) %>
                      </td>
