--- a/app/views/selection_produit/_selection_manuelle.html.erb
+++ b/app/views/selection_produit/_selection_manuelle.html.erb
@@ -1,3 +1,5 @@
+<div class="text-center fw-bold">catégories</div> <hr>
+
 <div class="d-flex flex-wrap justify-content-center align-items-center mb-3">
 
   <%= button_to display_categorie_selected_selection_produit_index_path(
