--- a/app/views/selection_produit/_categorie_selected.html.erb
+++ b/app/views/selection_produit/_categorie_selected.html.erb
@@ -1,6 +1,8 @@
+<div class="text-center fw-bold">tailles</div> <hr>
+
 <div class="d-flex flex-wrap justify-content-center align-items-center mb-3">
 
-  <% if @tailles.any? %>
+  <%# if @tailles.any? %>
 
       <%= button_to display_taille_selected_selection_produit_index_path(
           categorie_produit: @categorie_produits, taille: "all"), 
@@ -20,7 +22,7 @@
       <% end %>
     <% end %>
 
-  <% end %>
+  <%# end %>
   
 </div>
 
