--- a/app/views/selection_produit/_taille_selected.html.erb
+++ b/app/views/selection_produit/_taille_selected.html.erb
@@ -1,3 +1,4 @@
+<div class="text-center fw-bold">couleurs</div> <hr>
 
 <div class="d-flex flex-wrap justify-content-center align-items-center mb-3">
   <%= button_to display_couleur_selected_selection_produit_index_path(
