ajout synthese et produits dans fournisseur

--- a/app/views/fournisseurs/show.html.erb
+++ b/app/views/fournisseurs/show.html.erb
@@ -2,6 +2,9 @@
 
 <%= render @fournisseur %>
 
+
+<%= render 'produits' %>
+
 <hr>
 
 <%= return_model_index_button("Retour vers fournisseurs", fournisseurs_path) %>
