--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -4,6 +4,5 @@
 
 <br>
 
-<div>
-  <%= link_to "Back to meetings", meetings_path %>
-</div>
+<%= return_model_index_button("Retour vers rendez-vous", meetings_path) %>
+
