--- a/app/views/commandes/_footer.html.erb
+++ b/app/views/commandes/_footer.html.erb
@@ -9,8 +9,8 @@
         </div>
         <div class="col text-end">
             <button class="btn btn-primary fa fa-bounce" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
-                <i class="fa fa-file me-1"></i>
-                <span class="d-none d-md-inline">editer</span>
+                <i class="fa fa-file"></i>
+                <span class="d-none d-md-inline ms-1">editer</span>
             </button>
         </div>
     </div>
