base reminder meeting mailer

--- a/app/views/meeting_mailer/reminder_email.html.erb
+++ b/app/views/meeting_mailer/reminder_email.html.erb
@@ -1,5 +1,19 @@
-<h1>Meeting#reminder_email</h1>
+<!-- app/views/commande_mailer/reminder_email.html.erb -->
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1>Rappel de RDV</h1>
+    <p> <%= @recipient.intitule %> <%= @recipient.full_name %>,</p>
+    <p>Ce message est un rappel de votre RDV prévu le <%= @meeting.datedebut.strftime('%d/%m/%Y à %H:%M') %>.</p>
 
-<p>
-  <%= @greeting %>, find me in app/views/meeting_mailer/reminder_email.html.erb
-</p>
+    <% if @meeting.lieu %>
+      lieu du RDV: <%= @meeting.lieu %>
+    <% end %>
+
+    <p>Nous restons à votre écoute</p>
+    adresse 
+    site web 
+    tel 
+
+  </body>
+</html>
