--- a/app/views/meeting_mailer/reminder_email.text.erb
+++ b/app/views/meeting_mailer/reminder_email.text.erb
@@ -7,9 +7,7 @@
       lieu du RDV: <%= @meeting.lieu %>
     <% end %>
 
-    <p>Nous restons à votre écoute</p>
-    adresse 
-    site web 
-    tel 
+   <%= render 'layouts/mailer/footer' %>
+
 
   </body>
