--- a/app/views/produits/_commandes_liees.html.erb
+++ b/app/views/produits/_commandes_liees.html.erb
@@ -11,12 +11,12 @@
             <% @commandes_liees.each do |commande|  %>
 
                 <%= link_to commande_path(commande), class: "text-decoration-none" do %>
-                    <div class="card d-flex flex-row mx-2 mb-3 p-2 bg-light shadow-sm">
-                        <span class="fw-bold mx-2"> <%= commande.client.full_name %> </span>
-                        <span class="mx-2"> <%= commande.full_name %> </span> 
-                        <span class="mx-2"> <%= commande.type_locvente %> </span> 
-                        <span class="mx-2"> <%= commande.debutloc %> </span> 
-                        <span class="mx-2">  <%= commande.finloc %> </span> 
+                    <div class="mx-2 mb-3 p-2 bg-light shadow-sm">
+                        <%= custom_badge("", "", "", "fw-bold", commande.client.full_name ) %>
+                        <%= custom_badge("", "", "", "", commande.full_name ) %>
+                        <%= custom_badge("", "", "", "", commande.type_locvente ) %>
+                        <%= custom_badge("", "", "", "", commande.debutloc ) %>
+                        <%= custom_badge("", "", "", "", commande.finloc ) %>
 
                     </div>
                 <% end %>
