--- a/app/assets/stylesheets/document.css
+++ b/app/assets/stylesheets/document.css
@@ -168,7 +168,7 @@
   display: flex;
   flex-wrap: wrap; /* Allows items to wrap onto multiple lines */
   justify-content: center; /* Horizontally centers items in the container */
-  margin-left: 40px; /* Horizontally centers items in the container */
+  margin: 40px; 
 }
 
 
@@ -255,7 +255,7 @@
 
 .shadowed{
   border-radius: .2em;
-  box-shadow: 2px 3px 4px rgba(165, 163, 163, 0.8);
+  box-shadow: 1px 2px 3px 4px rgba(165, 163, 163, 0.8);
 }
 
 .page-break {
@@ -270,7 +270,10 @@
   color: #fff;
   background-color: #fff;
   height: 5px;
-  margin: 10px;
-  margin-top: 70px;
-  width: 90%;
+  margin-top: 60px;
+  width: 100%;
+}
+
+.test-color{
+  color:#8f1f46
 }
