--- a/app/views/etiquettes/index.html.erb
+++ b/app/views/etiquettes/index.html.erb
@@ -1,38 +1,35 @@
 <%= bandeau_entete("Etiquettes", "tags", "", "", "") %>
 
 <div class="mx-2">
+  <!-- Form to submit the select_tag values to the 'edition' action -->
+  <%= form_tag edition_etiquettes_path, method: :post, format: :pdf, data: { turbo: false } do %>
+     <div class="input-group mb-1">
+      <%= label_tag :prod1, " Produit n°1", class: "input-group-text label-with-format centered" %>
+      <%= select_tag :prod1, options_for_select(@produits.map { |p| [p.nom_ref_couleur_taille, p.id] }), 
+          prompt: "Selectionner un produit", class: "form-select field-with-format" %>
+    </div>
 
-    <%= form_tag edition_etiquettes_path, method: :get, format: :pdf do %>
-      <div class="input-group mb-1">
-        <%= label_tag :prod1, " Produit n°1", class:"input-group-text label-with-format centered" %>
-        <%= select_tag :prod1, options_for_select(@produits.map {|p| [p.nom_ref_couleur_taille, p.id]}), 
-            prompt: "Selectionner un produit", class: "form-select field-with-format" %>
-      </div>
+    <div class="input-group mb-1">
+      <%= label_tag :prod2, " Produit n°2", class: "input-group-text label-with-format centered" %>
+      <%= select_tag :prod2, options_for_select(@produits.map { |p| [p.nom_ref_couleur_taille, p.id] }), 
+          prompt: "Selectionner un produit", class: "form-select field-with-format" %>
+    </div>
 
-      <div class="input-group mb-1">
-        <%= label_tag :prod2, " Produit n°2", class:"input-group-text label-with-format centered" %>
-        <%= select_tag :prod2, options_for_select(@produits.map {|p| [p.nom_ref_couleur_taille, p.id]}), 
-            prompt: "Selectionner un produit", class: "form-select field-with-format" %>
-      </div>
+    <div class="input-group mb-1">
+      <%= label_tag :prod3, " Produit n°3", class: "input-group-text label-with-format centered" %>
+      <%= select_tag :prod3, options_for_select(@produits.map { |p| [p.nom_ref_couleur_taille, p.id] }), 
+          prompt: "Selectionner un produit", class: "form-select field-with-format" %>
+    </div>
 
-      <div class="input-group mb-1">
-        <%= label_tag :prod3, " Produit n°3", class:"input-group-text label-with-format centered" %>
-        <%= select_tag :prod3, options_for_select(@produits.map {|p| [p.nom_ref_couleur_taille, p.id]}), 
-            prompt: "Selectionner un produit", class: "form-select field-with-format" %>
-      </div>
+    <div class="input-group mb-1">
+      <%= label_tag :prod4, " Produit n°4", class: "input-group-text label-with-format centered" %>
+      <%= select_tag :prod4, options_for_select(@produits.map { |p| [p.nom_ref_couleur_taille, p.id] }), 
+          prompt: "Selectionner un produit", class: "form-select field-with-format" %>
+    </div>
 
-      <div class="input-group mb-1">
-        <%= label_tag :prod4, " Produit n°4", class:"input-group-text label-with-format centered" %>
-        <%= select_tag :prod4, options_for_select(@produits.map {|p| [p.nom_ref_couleur_taille, p.id]}), 
-            prompt: "Selectionner un produit", class: "form-select field-with-format" %>
-      </div>
-
-      <div class="text-end mt-2">
-        <%= button_tag( :class => "btn btn-success") do %>
-          <i class="fa-regular fa-thumbs-up fa-bounce"></i>
-        <% end %>
-      </div>
-    <% end %>
-
+    <div class="text-end mt-2">
+      <!-- Submit button to submit the form and call the 'edition' action in the controller -->
+      <%= submit_tag 'Editer', class: 'btn m-1 btn-danger' %>
+    </div>
+  <% end %>
 </div>
-
